# whisrs

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compositor_test.md  feature_request.md
.github/workflows/: release.yml
assets/: .gitkeep
contrib/: whisrs.1  whisrs.service  whisrsd.1
contrib/asr-sidecars/: README.md
contrib/asr-sidecars/moonshine/: README.md  config.toml.example  requirements.txt  server.py
contrib/asr-sidecars/parakeet/: README.md  config.toml.example  requirements.txt  server.py
contrib/asr-sidecars/vibevoice/: README.md  config.toml.example  requirements.txt  server.py
contrib/gnome-shell-extension/whisrs-overlay@eresende.github/: extension.js  metadata.json  stylesheet.css
crates/asr-dedup/: Cargo.toml  README.md
crates/asr-dedup/src/: lib.rs
crates/audio-gate/: Cargo.toml  README.md
crates/audio-gate/src/: lib.rs
crates/audio-silence-gate/: Cargo.toml  README.md
crates/filler-remove/: Cargo.toml  README.md
crates/filler-remove/src/: lib.rs
crates/prompt-echo/: Cargo.toml  README.md
crates/xkb-type/: Cargo.toml  README.md
crates/xkb-type/examples/: type.rs  vk_recorder.rs  vk_stress.rs
crates/xkb-type/src/: clipboard.rs  keyboard.rs  keymap.rs  lib.rs  wayland_vk.rs
docs/: comparison.md  configuration.md  faq.md  troubleshooting.md  version-roadmap.md
packaging/aur/: PKGBUILD
scripts/: dev-install.sh  verify-injection.sh
src/: history.rs  lib.rs  llm.rs
src/audio/: capture.rs  mod.rs  playback.rs  silence.rs
src/cli/: main.rs
src/config/: edit.rs  setup.rs
src/daemon/: main.rs
src/hotkey/: mod.rs  parse.rs
src/input/: clipboard.rs  keymap.rs  mod.rs
src/overlay/: service.rs
src/post_processing/: filler.rs  mod.rs  prompt_echo.rs
src/transcription/: asr_sidecar.rs  dedup.rs  groq.rs  local_parakeet.rs  local_vosk.rs  local_whisper.rs  mod.rs  openai_realtime.rs  openai_rest.rs
src/transcription/openai_realtime_protocol/: engine.rs  profile.rs
src/tts/: groq.rs  mod.rs
src/window/: mod.rs  niri.rs
