[package]
name = "filler-remove"
version = "0.1.0"
edition = "2021"
description = "Regex-based filler word and stutter removal from transcribed speech"
repository = "https://github.com/y0sif/whisrs/tree/main/crates/filler-remove"
license = "MIT"
keywords = ["speech", "filler", "stutter", "transcription", "text-processing"]
categories = ["text-processing"]

[dependencies]
regex = "1"
